--- a/css/styles.css
+++ b/css/styles.css
@@ -340,6 +340,10 @@ body {
 .command-icon:focus {
   fill: var(--primari-white-color);
 }
+.command-svg {
+  width: 20px;
+  height: 20px;
+}
 
 /* Footer content */
 
@@ -426,6 +430,8 @@ body {
 
 .footer-icon {
   fill: var(--primari-white-color);
+  width: 20px;
+  height: 20px;
 }
 
 .footer-conteiner {
@@ -771,22 +777,26 @@ textarea:focus {
 }
 .checkbox-icon {
   display: inline-block;
+  justify-content: center;
+  align-items: center;
+  width: 16px;
+  height: 15px;
   border: 2px solid var(--primari-text-color);
   border-radius: 2px;
   cursor: pointer;
+  margin-right: 8px;
+  margin-bottom: 5px;
+
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.checkbox:focus + .checkbox-label .checkbox-icon {
+.checkbox:focus + .checkbox-icon {
   background-color: var(--accent-color);
-  border-color: transparent;
 }
 
-.checkbox:checked + .checkbox-label .checkbox-icon {
-  border-color: transparent;
+.checkbox:checked + .checkbox-icon {
+  border-color: var(--accent-color);
+  background-image: url(../images/icon-check.svg);
   background-color: var(--accent-color);
   background-size: contain;
   background-origin: border-box;
-}
-.checkbox-label {
-  margin: 0;
 }
